refactor: String으로 저장한 value 값을 URI으로 변경